<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/colorWhite"
    tools:context=".activity.SplashScreenActivity">

    <ImageView
        android:id="@+id/imgSplashscreen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/About"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvviewsplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/tvdescsplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:fontFamily="sans-serif-condensed-light"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorBlack"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amikom"/>

</LinearLayout>