<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    tools:context=".activity.MoviesDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/backdrop_image"
            android:minHeight="270dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:11.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/no_image" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite_red_24dp"
            android:backgroundTint="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_delete_white_24dp"
            android:backgroundTint="@color/colorGreen"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:animateLayoutChanges="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            app:cardCornerRadius="16dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/TOP_START"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="135dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tv_realease_year"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="@string/release_date" />

                <RatingBar
                    android:id="@+id/rb_userrating"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:paddingBottom="10dp"
                    android:progressDrawable="@drawable/ic_stars_red_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realease_year" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rb_userrating"
                    tools:text="4.5" />

                <RatingBar
                    android:id="@+id/rb_voter"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:paddingBottom="10dp"
                    android:progressDrawable="@drawable/ic_people_red_24dp"
                    app:layout_constraintStart_toEndOf="@id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realease_year" />

                <TextView
                    android:id="@+id/tv_voter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/rb_voter"
                    tools:text="4.5/5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="285dp"
            android:background="@color/colorWhite"
            android:paddingTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="serif"
                android:paddingStart="0dp"
                android:paddingEnd="26dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_desc"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_realease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/release_date"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_text" />

            <TextView
                android:id="@+id/tv_realease_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="serif"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_realease"
                tools:text="@string/release_date" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_overview"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_realease_text" />

            <TextView
                android:id="@+id/tv_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="serif"
                android:paddingStart="0dp"
                android:paddingEnd="26dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                tools:text="@string/detail_overview" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/genres"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="23sp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_text" />

            <TextView
                android:id="@+id/tv_genres_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="serif"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres"
                tools:text="@string/genres"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_backdrop"
            app:layout_constraintEnd_toEndOf="@+id/img_backdrop"
            app:layout_constraintStart_toStartOf="@+id/img_backdrop"
            app:layout_constraintTop_toTopOf="@+id/img_backdrop" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="13dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:contentDescription="@string/image_poster"
                android:scaleType="centerCrop"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/no_image" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>